Update SelectionAvancee.java